# pgblackboard

./: .dockerignore  .editorconfig  .eslintignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  Jakefile.js  MANIFEST.in  Makefile  README  README.md  build.rs  compose.yml  demo.sql  docker-compose.yml  dockerfile  exec_request.json  index.html  jasmine.html  jasmine.json  license  makefile  package-lock.json  package.json  pgblackboard.conf.example  pgtest.sh  postgres.dockerfile  readme.md  requirements.txt  server.js  setup.py  uwsgi.ini  wsgi.py  wsgiapp.py
debian/: control  pgblackboard.service  rules
pgblackboard/: __init__.py  __main__.py  dbapp.py  editing.py  fileapp.py  geo.py  index.html  index.py  pgtypes.py  query.py  server.py  sql.py  table.py  tree.py
server/: Cargo.toml  dbms.rs  deps.js  main.rs  pgbb.js  pgblackboard.js  pgwire.js  sql.rs  sql_split.js  sqlexec.rs  statres.rs  ugly_server.js
src/: dbms.rs  fileapp.rs  http.rs  index.html  index.rs  index_.html  lib.rs  main.rs  md5.rs  postgres.rs  regular.html  sqlexec.rs  statres.rs  view.rs  webapi.rs
static/: app.js  dark.css  editor.js  index.html  knockout-class.js  knockout-es5.js  layout.css  main.css  main.js  map.js  model.js  queries.css  queries.js  sidebar.css  splitpanel.css  splitpanel.js  sqlqueries.sql  table.css  tree.css  tree.js  tree.sql
test/: sql_test.py  test_sql.py
ui/: .eslintignore  Cargo.toml  Jakefile.js  amd.js  app.js  bootstrap.html  build.js  build.rs  demo.html  deps.js  error.html  fontello.html  imd.html  index.html  jasmine.html  jasmine.json  lib.rs  (+15 more)
(+874 files in other folders)
