[project]
name = "pgblackboard"
version = "0.2.0"
authors = ["exe-dealer <exe-dealer@yandex.ru>"]
#build = "ui/build.rs" 

[dependencies]
argparse = "0.2"
rustc-serialize = "0.3"
threadpool = "0.1.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
# flate2 = "0.2.6"

[[bin]]
name = "pgblackboard"
path = "server/main.rs"
