[package]
name = "pgblackboard"
version = "0.2.0"
authors = ["exe-dealer <exe-dealer@yandex.ru>"]
repository = "https://github.com/exe-dealer/pgblackboard"

[dependencies]
threadpool = "0.1.3"
serde = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
md5 = "0.3.6"
# flate2 = "0.2.6"

[[bin]]
name = "pgblackboard"
path = "server/main.rs"

[features]
uibuild = []
